--- a/src/app/components/hero/hero.component.css
+++ b/src/app/components/hero/hero.component.css
@@ -1,12 +1,12 @@
 /* hero.component.css */
 .hero {
     position: relative;
-    background: url('/assets/hero-image.jpg') no-repeat center center/cover;
+    background: url('/h.jpg') no-repeat center center/cover; height: 100vh;
     height: 100vh;
-    color: white;
+    /* color: white; */
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; 
   }
   
   .overlay {
